--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,13 @@
 <resources>
-    <string name="app_name">pelismtv</string>
+    <string name="app_name">PelismTV</string>
     <string name="browse_title">Videos by Your Company</string>
     <string name="related_movies">Related Videos</string>
     <string name="grid_view">Grid View</string>
     <string name="error_fragment">Error Fragment</string>
     <string name="personal_settings">Personal Settings</string>
-    <string name="watch_trailer_1">Watch trailer</string>
-    <string name="watch_trailer_2">FREE</string>
-    <string name="rent_1">Rent By Day</string>
-    <string name="rent_2">From $1.99</string>
-    <string name="buy_1">Buy and Own</string>
-    <string name="buy_2">AT $9.99</string>
+    <string name="watch_trailer_1">Ver pelicula</string>
+    <string name="watch_trailer_2">""</string>
+
     <string name="movie">Movie</string>
 
     <!-- Error messages -->
@@ -32,4 +29,6 @@
     <string name="search_results">Resultados de búsqueda de \'%1$s\'</string>
     <string name="no_search_results">No se encontraron resultados de búsqueda para \'%1$s\'</string>
     <string name="header_icon">Icono de encabezado</string>
+    <string name="vertical_grid_title">Peliculas</string>
+    <string name="playback_tag">PLAYBACK_TAG</string>
 </resources>
